[package]
name = "test-pubsub-server"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

futures = { version = "0.3", features = ["thread-pool"] }

jsonrpc-core = { version = "16.0", path = "../jsonrpc/core" }
jsonrpc-pubsub = { version = "16.0", path = "../jsonrpc/pubsub" }
jsonrpc-ws-server = { version = "16.0", path = "../jsonrpc/ws" }
